Text edited & project added

--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
   <body>
     <header class="py-6 bg-white shadow">
       <div class="container mx-auto px-4 flex items-center justify-between">
-        <h1 class="text-5xl font-bold"><a href="/" class="text-gray-800 hover:text-blue-500">My Portfolio</a></h1>
+        <h1 class="text-5xl font-bold"><a href="homepage.html" class="text-gray-800 hover:text-blue-500">My Portfolio</a></h1>
         <nav class="ml-8">
           <ul class="flex space-x-8">
             <li><a href="about.html" class="text-gray-800 hover:text-blue-500">About</a></li>
@@ -34,16 +34,24 @@
     <div class="flex flex-wrap mt-10">
       <div class="w-full md:w-1/2 lg:w-1/3 px-2 mb-4">
         <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-          <img class="w-full h-48 object-cover" src="https://via.placeholder.com/640x360" alt="Project 1">
+          <br>
+          <h2 class="text-xl font-bold mb-2 text-center">Buddy</h2>
+          <img class="w-full h-48 object-cover" src="/images/Buddy1.png" alt="Project 1">
+          <br>
+          <img class="w-full h-48 object-cover" src="/images/Buddy2.png" alt="Project 1">
+          <br>
+          <img class="w-full h-48 object-cover" src="/images/Buddy3.png" alt="Project 1">
+          <br>
+          <img class="w-full h-48 object-cover" src="/images/Buddy4.png" alt="Project 1">
           <div class="p-4">
-            <h2 class="text-xl font-bold mb-2">Project 1</h2>
-            <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit vel nisl fermentum eleifend in vel ex.</p>
+            <p class="text-gray-700 text-center">Buddy was created to help people coming from overseas, connect with locals in the Wellington region to share their culture, language and passions. It was the final group project that I was involved in at Dev Academy. My group wrote this project in Typescript using React, Auth0, Express, Node.js and SQL and we practiced agile methodologies throughout our time creating together. I learned a lot about the importance of planning and communication in this project. While they both do take up a fair amount of time, like they say "Fail to prepare, prepare to fail". Both planning and communication are the biggest lessons I took away from the project, they are both invaluable when it comes to effectively working in a team.  </p>
+            <br>
+            <a href="https://buddy.devacademy.nz/" class="text-black-800 hover:text-blue-500">Click here for the deployed version.</a>
           </div>
         </div>
       </div>
-
       <!-- Project 2 -->
-      <div class="w-full md:w-1/2 lg:w-1/3 px-2 mb-4">
+      <!-- <div class="w-full md:w-1/2 lg:w-1/3 px-2 mb-4">
         <div class="bg-white rounded-lg shadow-lg overflow-hidden">
           <img class="w-full h-48 object-cover" src="https://via.placeholder.com/640x360" alt="Project 2">
           <div class="p-4">
@@ -51,5 +59,5 @@
             <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit vel nisl fermentum eleifend in vel ex.</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </body>
