--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <body>
     <header class="py-6 bg-white shadow">
       <div class="container mx-auto px-4 flex items-center justify-between">
-        <h1 class="text-5xl font-bold"><a href="/" class="text-gray-800 hover:text-blue-500">My Portfolio</a></h1>
+        <h1 class="text-5xl font-bold"><a href="homepage.html" class="text-gray-800 hover:text-blue-500">My Portfolio</a></h1>
         <nav class="ml-8">
           <ul class="flex space-x-8">
             <li><a href="about.html" class="text-gray-800 hover:text-blue-500">About</a></li>
@@ -44,6 +44,10 @@
         </p>
         <p class="text-lg mb-6">
           I love all animals, but I really love dogs, so in addition to my creative pursuits and the many delicious foods I've been making from Pinterest, you can frequently hear me talking about my dog Buddy and his antics or chauffeuring my daughter Belle to her various dance classes!
+          <br>
+          <br>
+          <br>
+          <a href="https://docs.google.com/document/d/114-0pdP28r68BO-rG845aZwrpSB-RhRDAb7cq-HFdt0/edit?usp=sharing" class="text-black-800 hover:text-blue-500">Click here to view my current CV</a>
       </div>
     </div>
   </div>
