--- a/homepage.html
+++ b/homepage.html
@@ -5,28 +5,16 @@
     <title>
       My Portfolio
     </title>
-    <style>
-      .title-link {
-        display: block;
-        text-decoration: none;
-        color: black;
-      }
-      .title-link:hover {
-        color: #d1d5db;
-      }
-    </style>
     <link rel="stylesheet" href="https://unpkg.com/@tailwindcss/typography@^0.4.0/dist/typography.css" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^2.2/dist/tailwind.min.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header class="py-4 bg-white shadow">
-      <div class="container mx-auto px-4 flex justify-center">
-        <h1>
-          <a href="index.html" class="title-link">My Portfolio</a>
-        </h1>
-        <nav class="mt-4">
-          <ul class="flex space-x-4">
+    <header class="py-6 bg-white shadow">
+      <div class="container mx-auto px-4 flex items-center justify-between">
+        <h1 class="text-5xl font-bold"><a href="homepage.html" class="text-gray-800 hover:text-blue-500">My Portfolio</a></h1>
+        <nav class="ml-8">
+          <ul class="flex space-x-8">
             <li><a href="about.html" class="text-gray-800 hover:text-blue-500">About</a></li>
             <li><a href="skills.html" class="text-gray-800 hover:text-blue-500">Skills</a></li>
             <li><a href="projects.html" class="text-gray-800 hover:text-blue-500">Projects</a></li>
@@ -40,17 +28,11 @@
     <main class="container mx-auto px-4">
       <section id="about" class="mt-12">
         <h2 class="text-2xl font-bold mb-4">About Me</h2>
-        <p class="text-gray-700">Hi, my name is [Your Name] and I'm a software engineer with one year of experience in JavaScript. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet ante ac metus posuere vestibulum.</p>
+        <p class="text-gray-700">Hi, my name is Emily Waters and I'm a software developer and graduate of Dev Academy Aotearoa!</p>
       </section>
 
-      <section id="skills" class="mt-12">
-        <h2 class="text-2xl font-bold mb-4">Skills</h2>
-        <ul class="text-gray-700">
-          <li>JavaScript</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>React</li>
-        </ul>
+      <section id="click" class="mt-12">
+        <p class="text-gray-700">Please have a look around my site to see some more about me, what I have been up to and why I'd be a great fit for your team!</p>
       </section>
       <br>
       <br>
@@ -64,7 +46,7 @@
     <div class="flex flex-wrap mt-10">
       <div class="w-full md:w-1/2 lg:w-1/3 px-2 mb-4">
         <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-          <img class="w-full h-48 object-cover" src="https://via.placeholder.com/640x360" alt="Project 1">
+          <img class="w-full h-48 object-cover" src="/images/Buddy1.png" alt="Project 1">
           <div class="p-4">
             <h2 class="text-xl font-bold mb-2">Project 1</h2>
             <p class="text-gray-700 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit vel nisl fermentum eleifend in vel ex.</p>
