--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
   <body>
     <header class="py-6 bg-white shadow">
       <div class="container mx-auto px-4 flex items-center justify-between">
-        <h1 class="text-5xl font-bold"><a href="homepage.html" class="text-gray-800 hover:text-blue-500">My Portfolio</a></h1>
+        <h1 class="text-5xl font-bold"><a href="homepage.html" class="text-gray-800 hover:text-blue-500">EMILY WATERS</a></h1>
         <nav class="ml-8">
           <ul class="flex space-x-8">
             <li><a href="about.html" class="text-gray-800 hover:text-blue-500">About</a></li>
@@ -27,12 +27,12 @@
 
     <main class="container mx-auto px-4">
       <section id="about" class="mt-12">
-        <h2 class="text-2xl font-bold mb-4">About Me</h2>
+        <h2 class="text-2xl font-bold mb-4 text-center">About Me</h2>
         <p class="text-gray-700">Hi, my name is Emily Waters and I'm a software developer and graduate of Dev Academy Aotearoa!</p>
       </section>
 
       <section id="click" class="mt-12">
-        <p class="text-gray-700">Please have a look around my site to see some more about me, what I have been up to and why I'd be a great fit for your team!</p>
+        <p class="text-gray-700 text-center">Please have a look around my site to see some more about me, what I have been up to and why I'd be a great fit for your team!</p>
       </section>
       <br>
       <br>
@@ -48,19 +48,20 @@
         <div class="bg-white rounded-lg shadow-lg overflow-hidden">
           <img class="w-full h-48 object-cover" src="/images/Buddy1.png" alt="Project 1">
           <div class="p-4">
-            <h2 class="text-xl font-bold mb-2">Project 1</h2>
-            <p class="text-gray-700 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit vel nisl fermentum eleifend in vel ex.</p>
+            <h2 class="text-xl font-bold mb-2">Buddy</h2>
+            <p class="text-gray-700 mb-4">A final team project at Dev Academy to help international travellers meet people local to Wellington.</p>
             <ul class="text-gray-700 mb-4">
-              <li>Feature 1</li>
-              <li>Feature 2</li>
-              <li>Feature 3</li>
+              <li>Auth0</li>
+              <li>React</li>
+              <li>Redux</li>
+
             </ul>
             <a href="projects.html" class="block text-center py-2 px-4 bg-gray-800 text-white rounded hover:bg-gray-700 transition duration-300">Learn More</a>
           </div>
         </div>
       </div>
 
-      <!-- Project 2 -->
+      <!-- Project 2
       <div class="w-full md:w-1/2 lg:w-1/3 px-2 mb-4">
         <div class="bg-white rounded-lg shadow-lg overflow-hidden">
           <img class="w-full h-48 object-cover" src="https://via.placeholder.com/640x360" alt="Project 2">
@@ -75,4 +76,4 @@
             <a href="projects.html" class="block text-center py-2 px-4 bg-gray-800 text-white rounded hover:bg-gray-700 transition duration-300">Learn More</a>
           </div>
         </div>
-      </div>
+      </div> -->
