--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,7 @@
   <body>
     <header class="py-6 bg-white shadow">
       <div class="container mx-auto px-4 flex items-center justify-between">
-        <h1 class="text-5xl font-bold"><a href="homepage.html" class="text-gray-800 hover:text-blue-500">My Portfolio</a></h1>
+        <h1 class="text-5xl font-bold"><a href="homepage.html" class="text-gray-800 hover:text-blue-500">EMILY WATERS</a></h1>
         <nav class="ml-8">
           <ul class="flex space-x-8">
             <li><a href="about.html" class="text-gray-800 hover:text-blue-500">About</a></li>
