--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <h1 class="text-5xl font-bold"><a href="homepage.html" class="text-gray-800 hover:text-blue-500">EMILY WATERS</a></h1>
         <nav class="ml-8">
           <ul class="flex space-x-8">
-            <li><a href="about.html" class="text-gray-800 hover:text-blue-500">About</a></li>
+            <li><a href="about.html" class="text-gray-800 hover:text-blue-500">About me</a></li>
             <li><a href="skills.html" class="text-gray-800 hover:text-blue-500">Skills</a></li>
             <li><a href="projects.html" class="text-gray-800 hover:text-blue-500">Projects</a></li>
             <li><a href="contact.html" class="text-gray-800 hover:text-blue-500">Contact</a></li>
@@ -27,14 +27,14 @@
     <!-- About Me Section -->
 <section id="about" class="bg-white py-10">
   <div class="container mx-auto">
-    <h1 class="text-3xl font-bold text-center mb-10">About Me</h1>
+    <h1 class="text-3xl font-bold mb-10">About Me</h1>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <div>
-        <img src="./images/EDA-126(1).jpg" alt="Profile Picture" class="rounded-lg shadow-lg">
+        <img src="./images/EDA-126(1).jpg" alt="Profile Picture" class="rounded-lg shadow-lg w-3/4">
       </div>
       <div>
-        <p class="text-lg mb-6">
+        <p class="text-lg mb-6 text-center">
           Hi there! My name is Emily Waters and I'm a software developer with experience in JavaScript & Typescript.
         </p>
         <p class="text-lg mb-6">
