--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,7 @@
         <h1 class="text-5xl font-bold"><a href="homepage.html" class="text-gray-800 hover:text-blue-500">EMILY WATERS</a></h1>
         <nav class="ml-8">
           <ul class="flex space-x-8">
-            <li><a href="about.html" class="text-gray-800 hover:text-blue-500">About</a></li>
+            <li><a href="about.html" class="text-gray-800 hover:text-blue-500">About me</a></li>
             <li><a href="skills.html" class="text-gray-800 hover:text-blue-500">Skills</a></li>
             <li><a href="projects.html" class="text-gray-800 hover:text-blue-500">Projects</a></li>
             <li><a href="contact.html" class="text-gray-800 hover:text-blue-500">Contact</a></li>
